src/tests/testfiles/unary-operators/15.txt
testfiles/unary-operators/15.c:2:2: error: lvalue required as unary '&' operand, (got rvalue of type 'int')
 	&5;
 	^
testfiles/unary-operators/15.c:6:2: error: lvalue required as unary '&' operand, (got rvalue of type 'char')
 	&'b';
 	^
testfiles/unary-operators/15.c:8:2: error: lvalue required as unary '&' operand, (got rvalue of type 'float')
 	&5.5;
 	^
